--- a/checkout.phtml
+++ b/checkout.phtml
@@ -95,7 +95,7 @@ https://templatemo.com/tm-571-hexashop
                         <h2>your order</h2>
                         <span>Details to details is what makes Hexashop different from the other themes.</span>
                     </div>
-                         <form id="contact-form" data-mode='ajout' class="is-hidden ">
+                <form id="contact-form" data-mode='ajout' class="is-hidden ">
                             <table class="table border">
                                 <thead>
                                     <tr>
@@ -117,7 +117,7 @@ https://templatemo.com/tm-571-hexashop
                                     <tr>
                                         <td> <strong>TOTAL</strong></td>
                                         <td></td>
-                                       <td><strong> <?= $order['total'] ?></strong>
+                                       <td><strong> <?= $affichOrder['total'] ?></strong>
                                         </td>
                                     </tr>
 
