--- a/checkout.phtml
+++ b/checkout.phtml
@@ -117,7 +117,7 @@ https://templatemo.com/tm-571-hexashop
                                     <tr>
                                         <td> <strong>TOTAL</strong></td>
                                         <td></td>
-                                       <td><strong> <?= $affichOrder['total'] ?></strong>
+                                       <td><strong> <?= $order['total'] ?></strong>
                                         </td>
                                     </tr>
 
